crates/lulu-prep/tests/snapshots/fixture_snapshots__aliased_page.snap
---
source: crates/lulu-prep/tests/fixture_snapshots.rs
expression: report.normalized_for_diff()
---
{
  "catalog_fetch_date": "2026-09-03",
  "detected_tools": [],
  "findings": [
    {
      "code": "geometry.page-size-mismatch",
      "expected": "6.250 x 9.250 in",
      "fixable": true,
      "message": "100 page(s) measure 6.000 x 9.000 in but this product requires 6.250 x 9.250 in (0.125 in bleed per side)",
      "observed": "6.000 x 9.000 in",
      "pages": [
        1,
        2,
        3,
        4,
        5,
        6,
        7,
        8,
        9,
        10,
        11,
        12,
        13,
        14,
        15,
        16,
        17,
        18,
        19,
        20,
        21,
        22,
        23,
        24,
        25,
        26,
        27,
        28,
        29,
        30,
        31,
        32,
        33,
        34,
        35,
        36,
        37,
        38,
        39,
        40,
        41,
        42,
        43,
        44,
        45,
        46,
        47,
        48,
        49,
        50,
        51,
        52,
        53,
        54,
        55,
        56,
        57,
        58,
        59,
        60,
        61,
        62,
        63,
        64,
        65,
        66,
        67,
        68,
        69,
        70,
        71,
        72,
        73,
        74,
        75,
        76,
        77,
        78,
        79,
        80,
        81,
        82,
        83,
        84,
        85,
        86,
        87,
        88,
        89,
        90,
        91,
        92,
        93,
        94,
        95,
        96,
        97,
        98,
        99,
        100
      ],
      "severity": "blocking"
    }
  ],
  "generated_at": null,
  "page_count": 100,
  "product_sku": "0600X0900.BW.STD.PB.060UW444.MXX",
  "schema_version": 1,
  "stages": [],
  "tool_version": "0.1.0"
}
