crates/lulu-prep/tests/snapshots/fixture_snapshots__rotated.snap
---
source: crates/lulu-prep/tests/fixture_snapshots.rs
expression: report.normalized_for_diff()
---
{
  "catalog_fetch_date": "2026-09-03",
  "detected_tools": [],
  "findings": [
    {
      "code": "geometry.page-size-mismatch",
      "expected": "6.250 x 9.250 in",
      "fixable": true,
      "message": "1 page(s) measure 9.250 x 6.250 in but this product requires 6.250 x 9.250 in (0.125 in bleed per side)",
      "observed": "9.250 x 6.250 in",
      "pages": [
        1
      ],
      "severity": "blocking"
    },
    {
      "code": "page-count.below-minimum",
      "expected": ">= 32",
      "fixable": true,
      "message": "1 pages is below this product's 32-page minimum; 31 blank page(s) would be appended to reach 32",
      "observed": "1",
      "severity": "blocking"
    }
  ],
  "generated_at": null,
  "page_count": 1,
  "product_sku": "0600X0900.BW.STD.PB.060UW444.MXX",
  "schema_version": 1,
  "stages": [],
  "tool_version": "0.1.0"
}
